tests/baselines/reference/asyncModule_es2017.errors.txt
tests/cases/conformance/async/es2017/asyncModule_es2017.ts(1,1): error TS1042: 'async' modifier cannot be used here.


==== tests/cases/conformance/async/es2017/asyncModule_es2017.ts (1 errors) ====
    async module M {   
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
    }